[gd_scene load_steps=9 format=3 uid="uid://b30ixqckg1j5c"]

[ext_resource type="Script" path="res://Scripts/main-menu.gd" id="1_nvooe"]
[ext_resource type="FontFile" uid="uid://cwy1n1rvwjg5r" path="res://Fonts/AlienEncounters/SFAlienEncounters.ttf" id="2_pm4sq"]
[ext_resource type="FontFile" uid="uid://dokcyr4vw5wb6" path="res://Fonts/streamster/Streamster.ttf" id="3_iwtji"]
[ext_resource type="FontFile" uid="uid://dsx8djwkr6h3g" path="res://Fonts/AlienEncounters/SFAlienEncountersSolid-Ital.ttf" id="4_t56s4"]
[ext_resource type="AudioStream" uid="uid://pgpvvsbf1gpf" path="res://Sound/Music/Dreamy_Intro.wav" id="5_1s0hb"]
[ext_resource type="AudioStream" uid="uid://b2ku0pn6ubkyu" path="res://Sound/Music/Dreamy_Loop_part.wav" id="6_22rpp"]

[sub_resource type="Gradient" id="Gradient_8eysy"]
colors = PackedColorArray(0.941608, 0.772318, 0.179, 1, 0.839401, 0.757699, 0.686455, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y3wcb"]
gradient = SubResource("Gradient_8eysy")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nvooe")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1920.0
offset_right = 1080.0
offset_bottom = 840.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = SubResource("GradientTexture1D_y3wcb")

[node name="Pizza" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 50.0
offset_right = 884.0
offset_bottom = 204.0
theme_override_colors/font_outline_color = Color(0.94902, 0.137255, 0.0470588, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_pm4sq")
theme_override_font_sizes/font_size = 256
text = "PIZZA"

[node name="Dreams" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 581.0
offset_bottom = 317.0
theme_override_colors/font_color = Color(0.647059, 0.0509804, 0.262745, 1)
theme_override_fonts/font = ExtResource("3_iwtji")
theme_override_font_sizes/font_size = 128
text = "Dreams"

[node name="PizzaTarget" type="Control" parent="."]
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 50.0

[node name="DreamTarget" type="Control" parent="."]
anchors_preset = 0
offset_left = 500.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 100.0

[node name="LevelSelect" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -270.0
offset_right = 790.0
offset_bottom = -211.0
grow_vertical = 0
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.807843, 0.772549, 1, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.870588, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_t56s4")
theme_override_font_sizes/font_size = 64
text = "Select"
flat = true
alignment = 0

[node name="Start" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -200.0
offset_right = 790.0
offset_bottom = -141.0
grow_vertical = 0
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.807843, 0.772549, 1, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.870588, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_t56s4")
theme_override_font_sizes/font_size = 64
text = "Dream"
flat = true
alignment = 0

[node name="Options" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -130.0
offset_right = 790.0
offset_bottom = -71.0
grow_vertical = 0
focus_neighbor_left = NodePath("../Start")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Start")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.807843, 0.772549, 1, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.870588, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_t56s4")
theme_override_font_sizes/font_size = 64
text = "EDIT"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -60.0
offset_right = 790.0
offset_bottom = -1.0
grow_vertical = 0
focus_neighbor_left = NodePath("../Options")
focus_neighbor_top = NodePath("../Options")
focus_neighbor_right = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
focus_previous = NodePath("../Options")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.807843, 0.772549, 1, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.870588, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_t56s4")
theme_override_font_sizes/font_size = 64
text = "WAKE"
flat = true
alignment = 0

[node name="StartTarget" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_bottom = -200.0
grow_vertical = 0

[node name="LevelSelectTarget" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -270.0
offset_bottom = -270.0
grow_vertical = 0

[node name="OptionsTarget" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_bottom = -130.0
grow_vertical = 0

[node name="QuitTarget" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -60.0
grow_vertical = 0

[node name="IntroPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1s0hb")

[node name="LoopedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_22rpp")

[connection signal="mouse_entered" from="LevelSelect" to="." method="_on_level_select_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect" to="." method="_on_level_select_mouse_exited"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="mouse_entered" from="Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="Options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
